# uv-docker

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
src/: main.py
src/tests/: test_main.py
